fix(css): change global overflow-x-hidden to overflow-x-clip to fix sticky items bug

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ html, body {
     radial-gradient(circle at bottom left, rgba(64, 11, 20, 0.15) 0%, transparent 60%);
   background-attachment: fixed;
   color: var(--pearl);
-  overflow-x: hidden;
+  overflow-x: clip;
   width: 100%;
   -webkit-font-smoothing: antialiased;
   min-height: 100svh;
